# MultiTargetCUDA

./: CMakeLists.txt  CPU.h  Eigen.h  GPU.h  Pipeline.cu  Pipeline.h  README.md  UserCode.cu  UserCode.h  cuda_compat.h  cuda_kernel_utils.h  main.cu
